static/css: Fix line spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,11 +15,8 @@ body {
   border-radius: 5px;
 }
 .menu, .article-meta, footer { text-align: center; }
-.title { font-size: 1.1em; }
+.title { font-size: 1em; line-height: 1.2em; }
 footer a { text-decoration: none; }
-h1 {
-  line-height: 1.2em;
-}
 hr {
   border-style: dashed;
   color: #ddd;
